--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1297,6 +1297,9 @@ input[type=submit].landing-search-inputtext {
   .index-list-elements .right-elements .area-institution {
     right: calc(60px + 15% * 5);
   }
+  .pagination-container .w-50 {
+    width: 100% !important;
+  }
 }
 @media screen and (max-width: 991px) {
   .filters {
@@ -1314,52 +1317,67 @@ input[type=submit].landing-search-inputtext {
     position: static;
   }
 }
-.page-break {
-  margin-bottom: 2rem !important;
-  text-align: center;
-  margin: auto;
-}
-.page-break .input-group {
-  margin: auto;
-}
-.page-results {
-  text-align: center !important;
-}
-.page-results .form-group select {
-  float: none !important;
-  margin: auto;
-}
-.index-list-item {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.index-list-group {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
-.index-list-button {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+@media screen and (max-width: 767px) {
+  .page-break {
+    margin-bottom: 2rem !important;
+    text-align: center;
+    margin: auto;
+  }
+  .page-break .input-group {
+    margin: auto;
+  }
+  .pagination-container h6 {
+    font-size: 0.8rem;
+  }
+  .pagination-container .input-group-lg > .form-control {
+    font-size: 1rem;
+  }
+  .pagination-container .input-group-lg .input-group-append > .btn {
+    font-size: 1rem;
+  }
+  .pagination-container .form-control-lg {
+    font-size: 1rem;
+  }
+  .page-results {
+    margin-top: 2rem;
+    text-align: center !important;
+  }
+  .page-results .form-group select {
+    float: none !important;
+    margin: auto;
+  }
+  .index-list-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .index-list-group {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+  .index-list-button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 }
 @media screen and (max-width: 590px) {
   .filters .filter-selected.simple {
@@ -1391,6 +1409,9 @@ input[type=submit].landing-search-inputtext {
   .sources-list {
     padding-left: 0;
     padding-right: 0;
+  }
+  .index-list-title a {
+    font-size: 0.9rem;
   }
 }
 @media screen and (max-width: 492px) {
